package RemoteControl; 
option cc_generic_services = true;
option java_generic_services = true;
option py_generic_services = true;

 message ProtoMessage
 { 
 	//消息
 	message Sensor
 	{
 		optional float temperature = 1; //温度
 		optional float humidity = 2; //湿度
 		optional float pm2p5 = 3; //PM2.5
 	}

	optional uint32 messageType = 1; //消息类型
	optional uint32 messageCode = 2; //消息编码
	optional uint32 devNum = 3; //设备编码
	optional string date = 4;
	optional string time = 5; 
	optional Alert alert = 6;
	optional Configuration conf = 7;
	optional Light light = 8;
	optional Environment environment = 9;
	optional Human human = 10;
	optional Voice voice = 11;
	optional Power power = 12;
	optional ConnectionError errorId = 13;
 }

message MySQLRequest
{
    //后台搜索灯杆设备
    message DeviceNumber
    {
        optional bool environment = 1;
        optional bool car = 2;
        optional bool human = 3;
        optional bool sound = 4;
        optional uint32 network_number = 5;
    }
    optional uint32 lightId = 1;
    optional uint32 lightNunber = 2;
    optional DeviceNumber devNumber = 3;
    optional uint32 messageCode = 4;
}

message MySQLResponse
{
    message DeviceNumber
    {
        optional uint32 light_id = 1;
        optional uint32 light_number = 2;
        optional uint32 environment = 3;
        optional uint32 car = 4;
        optional uint32 human = 5;
        optional uint32 sound = 6;
        optional bytes envConfig = 7;
        optional bytes carConfig = 8;
        optional bytes humanConfig = 9;
        optional bytes soundConfig = 10;
        optional uint32 network_number = 11;
    }

    message PWM
    {
        repeated string pwmConfig = 1; //灯控制的PWM信息
    }


    optional uint32 lightid = 1;
    optional DeviceNumber devNumber = 2;
    optional uint32 messageCode = 3;
    optional bytes eeprom = 4;
    optional PWM pwm = 5;
}


service MySQLService
{
    rpc getDeviceId (MySQLRequest) returns (MySQLResponse);
    rpc getPassword (MySQLRequest) returns (MySQLResponse);
    //rpc getLastTime (MySQLRequest) returns (MySQLResponse);
    rpc getHarewareNumber (MySQLRequest) returns (MySQLResponse);
    rpc getIP (MySQLRequest) returns (MySQLResponse);
    rpc getDomainName (MySQLRequest) returns (MySQLResponse);
    
    rpc getLightConfig (MySQLRequest) returns (MySQLResponse);
    rpc getEnvironmentConfig (MySQLRequest) returns (MySQLResponse);
    rpc getCarConfig (MySQLRequest) returns (MySQLResponse);
    rpc getHumanConfig (MySQLRequest) returns (MySQLResponse);
    rpc getSoundConfig (MySQLRequest) returns (MySQLResponse);
    rpc getControllerSwitch (MySQLRequest) returns (MySQLResponse);
    rpc getPowerEnable (MySQLRequest) returns (MySQLResponse);

    rpc getPWM (MySQLRequest) returns (MySQLResponse);
    rpc getRelay (MySQLRequest) returns (MySQLResponse);
}
